# chatgpt_with_molecular_docking

./: instructions.md  main.py  pyproject.toml  schema.yaml  utils.py
